# IdInsights

./: .env.example  .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml
convex/: documents.ts  schema.ts
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/app/history/: loading.tsx  page.tsx
frontend/app/history/[id]/: page.tsx
frontend/components/: navbar.tsx  processing-status.tsx  results-card.tsx  skeleton-card.tsx  upload-zone.tsx
frontend/lib/: api.ts  types.ts  utils.ts
models/: id_card.py
public/: index.html
services/: convex_db.py  document_ai.py  openai_fixer.py
